fix body horizontal overflowing

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -158,7 +158,6 @@
     display: flex;
     flex-direction: column;
     min-height: 100dvh;
-    min-width: 100dvw;
   }
 
   a:active {
